# tz-cpp-boilerplate

./: .gitignore  CMakeLists.txt  README.md  dummy.cpp  dummy.hpp  main.cpp
include/: dummy.hpp
src/: dummy.cpp
tests/: CMakeLists.txt  DummyTest.cpp  README.md
